syntax = "proto3";

package org.corfudb.common;

option java_package = "org.corfudb.common.protocol.proto";
option optimize_for = LITE_RUNTIME;


enum ProtocolVersion {
    v0 = 0;
}

enum MessageType {
    PING = 0;

    AUTHENTICATE = 1;

    RESET = 2;

    SEAL  = 3;

    READ_LAYOUT  = 4;

    PREPARE_LAYOUT  = 5;

    PROPOSE_LAYOUT = 6;

    COMMIT_LAYOUT = 7;

    GET_TOKEN = 8;

    COMMIT_TRANSACTION = 9;

    BOOTSTRAP = 10;

    QUERY_STREAM = 16;

    READ_LOG = 17;

    QUERY_LOG_METADATA = 18;

    TRIM_LOG = 19;

    COMPACT_LOG = 20;

    FLASH = 21;

    RESTART = 22;

    QUERY_NODE = 23;

    REPORT_FAILURE = 24;

    HEAL_FAILURE = 25;

    EXECUTE_WORKFLOW = 26;
}

enum ERROR {
    OK = 0;

    UNKNOWN = 1;

    WRONG_EPOCH = 2;

    NOT_READY = 3;

    WRONG_CLUSTER = 4;

    TRIMMED = 5;

    OVERWRITE = 6;

    IO = 7;

    BOOTSTRAPPED = 8;

    NOT_BOOTSTRAPPED = 9;
}

message ServerError {
    ERROR code = 1;
    string message = 2;
}

message PingRequest {
}

message PingResponse {
}



message UUID {
    int64 lsb = 1;
    int64 msb = 2;
}

message Header {
    ProtocolVersion version = 1;
    int64 request_id = 2;
    uint32 priority = 3;
    MessageType type = 4;
    int64 epoch = 5;
    UUID cluster_id = 6;
}

message Request {
    Header header = 1;
    PingRequest pingRequest = 100;
}

message Response {
    Header header = 1;
    ServerError error = 2;
    PingResponse pingResponse = 100;
}

